--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,8 +16,8 @@
     <nav>
       <a href="/">Share Pad </a>
 
-      <div class="user"> <a href="/signup" id="signup"> Signup </a> </div>
-      <div class="user"> <a href="/login" id="login"> Login </a> </div>
+      <div class="user"> <a href="/users/signup" id="signup"> Signup </a> </div>
+      <div class="user"> <a href="/users/login" id="login"> Login </a> </div>
 
     </nav>
     <div class="intro">
